fix horizontal scroll

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,6 +9,7 @@
   &__body {
     margin: 0;
     background-color: #1d1d1d;
+    overflow-x: hidden;
 
     &--menu-open {
       overflow: hidden;
